--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -8,7 +8,6 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <form [formGroup]="form" novalidate>
     <ion-item>
       <ion-label position="floating">Numéro de commande : </ion-label>
       <p></p>
@@ -34,13 +33,8 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Notes</ion-label>
-      <ion-textarea formControlName='notesForm' type="text" inputmode="text" (click)="estChange=true"></ion-textarea>
-        <ion-fab-button *ngIf='estChange' slot='end' color="success" (click)="updateCommande()">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      
+      <ion-textarea [(ngModel)]="commande.notes" type="text" inputmode="text" (change)="updateCommande()"></ion-textarea>
     </ion-item>
-  </form>
   <ion-item (click)="choixProduitModal()">
     <ion-label color='primary'>Ajouter un produit</ion-label>
   </ion-item>
