--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -23,7 +23,7 @@
       <ion-icon name="create"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-list>
+  <ion-list *ngIf="!livraisons">
     <ion-item color='{{commande.commandeFacturee}}' *ngFor="let commande of commandes">
       <ion-item-sliding>
         <ion-item color='{{commande.commandeFacturee}}' routerLink="/afficher-commande"
@@ -33,10 +33,27 @@
           <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
         </ion-item>
         <ion-item-options side="start">
-          <ion-item-option *ngIf="!livraisons" color="success" (click)="livrerCommande(commande)">
+          <ion-item-option color="success" (click)="livrerCommande(commande)">
             <ion-icon name="archive" slot="icon-only"></ion-icon>
           </ion-item-option>
-          <ion-item-option *ngIf="livraisons" color="danger" (click)="delivrerCommande(commande)">
+        </ion-item-options>
+      </ion-item-sliding>
+      <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
+        <ion-icon name="clipboard"></ion-icon>
+      </ion-fab-button>
+    </ion-item>
+  </ion-list>
+  <ion-list *ngIf="livraisons">
+    <ion-item color='{{commande.commandeFacturee}}' *ngFor="let commande of listeLivraisons">
+      <ion-item-sliding>
+        <ion-item color='{{commande.commandeFacturee}}' routerLink="/afficher-commande"
+          (click)="versVueCommande(commande)">
+          <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
+          <ion-item>{{commande.numeroCommande}}</ion-item>
+          <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
+        </ion-item>
+        <ion-item-options *ngIf="commande.commandeFacturee!=''" side="start">
+          <ion-item-option color="danger" (click)="delivrerCommande(commande)">
             <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
           </ion-item-option>
         </ion-item-options>
