Création de la table "LivraisonsProduitsClients"

--- a/src/app/afficher-commande/afficher-commande.page.scss
+++ b/src/app/afficher-commande/afficher-commande.page.scss
@@ -4,3 +4,13 @@
 #formulaire{
     color: black
 }
+.livre{
+    text-align: center;
+    color: white;
+    background-color: green;
+}
+.parcielLivre{
+    text-align: center;
+    color: white;
+    background-color: orange;
+}
