--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -73,12 +73,19 @@
           <ion-label>{{commandeProduit.TVAProduit}} %</ion-label>
         </ion-note>
       </ion-item>
+      <ion-item-options side="start">
+        <ion-item-option color="success" (click)="livrerProduit(commandeProduit)">
+          <ion-icon name="archive" slot="icon-only"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
+    <div *ngIf="commandeProduit.livree==1 && !livraisons" class="livre">Livré</div>
+    <div class="parcielLivre" *ngIf="commandeProduit.livree==2">Parciellement livré</div>
   </ion-card>
   <ion-item>
     <ion-label position="floating">Réduction sur le total</ion-label>
