Mise en place de commande fournisseur

--- a/src/app/tabs/clients/clients.page.html
+++ b/src/app/tabs/clients/clients.page.html
@@ -6,7 +6,9 @@
     </ion-button>
   </ion-title>
   </ion-toolbar>
+  <ion-label class="typeCommandes">Clients</ion-label>
   <ion-toggle color="success" (ionChange)="changeEntreprises()"></ion-toggle>
+  <ion-label class="typeCommandes">Fournisseurs</ion-label>
   <ion-toolbar>
     <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheClient($event)">
     </ion-searchbar>
