--- a/src/app/tabs/produits/produits.page.html
+++ b/src/app/tabs/produits/produits.page.html
@@ -2,7 +2,8 @@
   <ion-toolbar color='primary'>
     <ion-title id='titre'>Liste des produits
     <ion-button class="deconnexion" name=boutton (click)="deconnexion()" expand="block" color="primary">
-      <ion-icon name="power"></ion-icon>
+      <!-- <ion-icon name="power"></ion-icon> -->
+      <ion-icon src="./assets/svg/power.svg"></ion-icon>
     </ion-button>
   </ion-title>
   </ion-toolbar>
@@ -52,7 +53,9 @@
 <ion-content>
   <ion-fab id='ajouter' routerLink="/ajouter-produit" vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
+      <!-- <ion-icon name="add"></ion-icon> -->
+      <ion-icon src="./assets/svg/add.svg"></ion-icon>
+
     </ion-fab-button>
   </ion-fab>
   <ion-list>
