--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,25 +3,22 @@
     <ion-button name=boutton (click)="logout()" expand="block" color="primary">Déconnexion</ion-button>
   </ion-toolbar>
 </ion-header> -->
-
-
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="commandes">
-      <ion-icon name="document"></ion-icon>
+      <!-- <ion-icon name="document"></ion-icon> -->
+      <ion-icon src="./assets/svg/file-tray-full.svg"></ion-icon>
       <ion-label>Commandes</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="produits">
-      <ion-icon name="apps"></ion-icon>
+      <!-- <ion-icon name="apps"></ion-icon> -->
+      <ion-icon src="./assets/svg/apps.svg"></ion-icon>
       <ion-label>Produits</ion-label>
     </ion-tab-button>
-
     <ion-tab-button tab="clients">
-      <ion-icon name="business"></ion-icon>
+      <!-- <ion-icon name="business"></ion-icon> -->
+      <ion-icon src="./assets/svg/business.svg"></ion-icon>
       <ion-label>Entreprises</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
