--- a/src/app/afficher-produit/afficher-produit.page.html
+++ b/src/app/afficher-produit/afficher-produit.page.html
@@ -12,10 +12,10 @@
     onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/e/e6/Pas_d%27image_disponible.svg';" alt=""/>
   </div>
   <ion-button (click)="changerPhoto('galerie')" color="tertiary" expand="block"(click)="imageChange=true; estChange=true">
-    <ion-icon name="image" slot="start"></ion-icon>
+    <!-- <ion-icon name="image" slot="start"></ion-icon> -->
+    <ion-icon src="./assets/svg/image.svg"></ion-icon>
     Changer l'image
   </ion-button>
-  
   <ion-item (click)="choixFournisseurModal()">
     <ion-label color='primary'>Changer de fournisseur</ion-label>
   </ion-item>
@@ -23,7 +23,6 @@
     <ion-label position="floating">Fournisseur</ion-label>
     <ion-textarea [(ngModel)]="fournisseur.nom" type="text" inputmode="text"></ion-textarea>
   </ion-item>
-
   <form [formGroup]="form" novalidate>
     <ion-item>
       <ion-label position="floating">Code Produit</ion-label>
@@ -58,7 +57,6 @@
       <ion-textarea formControlName="TVAForm" type="text" inputmode="number" (change)="estChange=true"></ion-textarea>
     </ion-item>
   </form>
-  
   <ion-radio-group [value]='produit.type'>
     <ion-list-header>
       <ion-label>Type de produit</ion-label>
@@ -86,15 +84,16 @@
     <ion-input [(ngModel)]="nouvelleCategorie" type="string"></ion-input>
   </ion-item>
   <ion-item></ion-item>
-
   <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button color="danger" (click)="RemoveProduit(produit)">
-      <ion-icon name="trash"></ion-icon>
+      <!-- <ion-icon name="trash"></ion-icon> -->
+      <ion-icon src="./assets/svg/trash.svg"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="success" (click)="UpdateProduit(produit,'Êtes-vous sûr de vouloir modifier le produit?')">
-      <ion-icon name="save"></ion-icon>
+      <!-- <ion-icon name="save"></ion-icon> -->
+      <ion-icon src="./assets/svg/save.svg"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
