--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -63,7 +63,8 @@
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="deleteProduit(commandeProduit)">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
+          <!-- <ion-icon name="trash" slot="icon-only"></ion-icon> -->
+          <ion-icon src="./assets/svg/trash.svg"></ion-icon>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
@@ -94,6 +95,7 @@
     <ion-textarea [(ngModel)]='commande.notes' type="text" inputmode="text"></ion-textarea>
   </ion-item>
   <ion-button (click)="ajoutCommande(commande)" expand="block" color="primary">
-    <ion-icon name="checkmark"></ion-icon>Ajouter
-  </ion-button>
+    <!-- <ion-icon name="checkmark"></ion-icon> -->
+    <ion-icon src="./assets/svg/checkmark.svg"></ion-icon>
+    Ajouter</ion-button>
 </ion-content>
