--- a/src/app/modals/modal-commandes/modal-commandes.page.html
+++ b/src/app/modals/modal-commandes/modal-commandes.page.html
@@ -3,11 +3,10 @@
     <ion-title id="titre">Liste des commandes de {{pseudoClient}}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="closeModal()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
+        <!-- <ion-icon slot="icon-only" name="close"></ion-icon> -->
+        <ion-icon src="./assets/svg/close.svg"></ion-icon>
       </ion-button>
     </ion-buttons>
-
-
   </ion-toolbar>
 </ion-header>
 <ion-content>
