--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -2,7 +2,8 @@
   <ion-toolbar color="primary">
     <ion-title id='titre'>Liste des commandes {{typeCommandes}}
       <ion-button class="deconnexion" name=boutton (click)="deconnexion()" expand="block" color="primary">
-        <ion-icon name="power"></ion-icon>
+        <!-- <ion-icon name="power"></ion-icon> -->
+      <ion-icon src="./assets/svg/power.svg"></ion-icon>
       </ion-button>
     </ion-title>
   </ion-toolbar>
@@ -20,7 +21,9 @@
   <ion-fab *ngIf="!livraisons" id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed"
     (click)="ajouterCommandes()">
     <ion-fab-button>
-      <ion-icon name="create"></ion-icon>
+      <!-- <ion-icon name="create"></ion-icon> -->
+      <ion-icon src="./assets/svg/bag-add.svg"></ion-icon>
+
     </ion-fab-button>
   </ion-fab>
   <ion-list *ngIf="!livraisons">
@@ -34,12 +37,14 @@
         </ion-item>
         <ion-item-options side="start">
           <ion-item-option color="success" (click)="livrerCommande(commande)">
-            <ion-icon name="archive" slot="icon-only"></ion-icon>
+            <!-- <ion-icon name="archive" slot="icon-only"></ion-icon> -->
+        <ion-icon size="large" src="./assets/svg/archive.svg"></ion-icon>
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
       <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
-        <ion-icon name="clipboard"></ion-icon>
+        <!-- <ion-icon name="clipboard"></ion-icon> -->
+        <ion-icon src="./assets/svg/clipboard.svg"></ion-icon>
       </ion-fab-button>
     </ion-item>
   </ion-list>
@@ -54,12 +59,14 @@
         </ion-item>
         <ion-item-options *ngIf="commande.commandeFacturee!='' || fournisseurs " side="start">
           <ion-item-option color="danger" (click)="delivrerCommande(commande)">
-            <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
+            <!-- <ion-icon name="arrow-back" slot="icon-only"></ion-icon> -->
+            <ion-icon size="large" src="./assets/svg/arrow-back.svg"></ion-icon>
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
       <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
-        <ion-icon name="clipboard"></ion-icon>
+        <!-- <ion-icon name="clipboard"></ion-icon> -->
+        <ion-icon src="./assets/svg/clipboard.svg"></ion-icon>
       </ion-fab-button>
     </ion-item>
   </ion-list>
