Adaptation des messages d'alertes

--- a/src/app/afficher-commande/afficher-commande.page.html
+++ b/src/app/afficher-commande/afficher-commande.page.html
@@ -2,9 +2,10 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourCommandes' slot="start">
-      <ion-back-button text=""></ion-back-button>
-      <ion-title id='titre'>Commande</ion-title>
+      <ion-back-button icon="./assets/svg/arrow-back.svg" text="">
+      </ion-back-button>
     </ion-buttons>
+    <ion-title id='titre'>Commande</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
