--- a/src/app/ajouter-commande/ajouter-commande.page.html
+++ b/src/app/ajouter-commande/ajouter-commande.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourclients' slot="start">
-      <ion-back-button defaultHref="/tabs/commandes" text=""></ion-back-button>
+      <ion-back-button icon="./assets/svg/arrow-back.svg" defaultHref="/tabs/commandes" text=""></ion-back-button>
     </ion-buttons>
     <ion-title id='titre'>Nouvelle commande {{typeCommandes}}</ion-title>
   </ion-toolbar>
