--- a/src/app/afficher-client/afficher-client.page.html
+++ b/src/app/afficher-client/afficher-client.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourClients' slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button icon="./assets/svg/arrow-back.svg" text=""></ion-back-button>
     </ion-buttons>
       <ion-title id='titre'>{{client.nom}}</ion-title>
   </ion-toolbar>
@@ -152,7 +152,7 @@
     </ion-fab-button>
   </ion-fab>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button color="success" (click)="UpdateClient(client,'Êtes-vous sûr de vouloir valider les modifications?')">
+    <ion-fab-button color="success" (click)="UpdateClient(client)">
       <!-- <ion-icon name="save"></ion-icon> -->
       <ion-icon src="./assets/svg/save.svg"></ion-icon>
     </ion-fab-button>
