--- a/src/app/modals/modal-contact/modal-contact.page.html
+++ b/src/app/modals/modal-contact/modal-contact.page.html
@@ -125,7 +125,7 @@
       </ion-fab-button>
     </ion-fab>
     <ion-fab *ngIf="!vide" vertical="bottom" horizontal="end" slot="fixed">
-      <ion-fab-button color="success" (click)="UpdateClient(client,'Êtes-vous sûr de vouloir modifier le client?')">
+      <ion-fab-button color="success" (click)="UpdateClient(client)">
         <!-- <ion-icon name="save"></ion-icon> -->
         <ion-icon src="./assets/svg/save.svg"></ion-icon>
       </ion-fab-button>
