--- a/src/app/modals/modal-produit/modal-produit.page.html
+++ b/src/app/modals/modal-produit/modal-produit.page.html
@@ -17,6 +17,7 @@
   <ion-list>
     <ion-item *ngFor="let produit of produits" (click)="versVueProduit(produit)">
       <ion-label>{{produit.nom}}</ion-label>
+      <ion-label>{{produit.quantite}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
