--- a/src/app/modals/modal-produit/modal-produit.page.html
+++ b/src/app/modals/modal-produit/modal-produit.page.html
@@ -9,7 +9,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
-    <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheProduit($event)">
+    <ion-searchbar animated placeholder="Recherche" clearIcon="./assets/svg/close.svg" search-icon="./assets/svg/search.svg" (ionChange)="rechercheProduit($event)">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
