--- a/src/app/tabs/clients/clients.page.html
+++ b/src/app/tabs/clients/clients.page.html
@@ -11,7 +11,7 @@
   <ion-toggle color="success" (ionChange)="changeEntreprises()"></ion-toggle>
   <ion-label class="typeCommandes">Fournisseurs</ion-label>
   <ion-toolbar>
-    <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheClient($event)">
+    <ion-searchbar animated placeholder="Recherche" clearIcon="./assets/svg/close.svg" search-icon="./assets/svg/search.svg" search-icon="./assets/svg/search.svg" (ionChange)="rechercheClient($event)">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
