--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -1,29 +1,32 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title id='titre'>Liste des commandes {{typeCommandes}}
+    <ion-title *ngIf="!livraisons" id='titre'>Liste des commandes {{typeCommandes}}
       <ion-button class="deconnexion" name=boutton (click)="deconnexion()" expand="block" color="primary">
-        <!-- <ion-icon name="power"></ion-icon> -->
-      <ion-icon src="./assets/svg/power.svg"></ion-icon>
+        <ion-icon src="./assets/svg/power.svg"></ion-icon>
+      </ion-button>
+    </ion-title>
+    <ion-title *ngIf="livraisons" id='titre'>Liste des livraisons {{typeCommandes}}
+      <ion-button class="deconnexion" name=boutton (click)="deconnexion()" expand="block" color="primary">
+        <ion-icon src="./assets/svg/power.svg"></ion-icon>
       </ion-button>
     </ion-title>
   </ion-toolbar>
   <ion-label class="typeCommandes">Clients</ion-label>
   <ion-toggle color="success" (ionChange)="versFournisseurs()"> </ion-toggle>
   <ion-label class="typeCommandes">Fournisseurs</ion-label>
-  <ion-button class="livraisons" name=boutton expand="block" color="success" (click)="versLivraisons()">{{typeLivraisons}}
+  <ion-button class="livraisons" name=boutton expand="block" color="success" (click)="versLivraisons()">
+    {{typeLivraisons}}
   </ion-button>
   <ion-toolbar>
-    <ion-searchbar animated placeholder="Recherche" (ionChange)="rechercheCommande($event)">
+    <ion-searchbar animated="true" clearIcon="./assets/svg/close.svg" search-icon="./assets/svg/search.svg" placeholder="Recherche" (ionChange)="rechercheCommande($event)">
     </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-fab *ngIf="!livraisons" id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end" slot="fixed"
-    (click)="ajouterCommandes()">
+  <ion-fab *ngIf="!livraisons" id='ajouter' routerLink="/ajouter-commande" vertical="bottom" horizontal="end"
+    slot="fixed" (click)="ajouterCommandes()">
     <ion-fab-button>
-      <!-- <ion-icon name="create"></ion-icon> -->
       <ion-icon src="./assets/svg/bag-add.svg"></ion-icon>
-
     </ion-fab-button>
   </ion-fab>
   <ion-list *ngIf="!livraisons">
@@ -37,13 +40,11 @@
         </ion-item>
         <ion-item-options side="start">
           <ion-item-option color="success" (click)="livrerCommande(commande)">
-            <!-- <ion-icon name="archive" slot="icon-only"></ion-icon> -->
-        <ion-icon size="large" src="./assets/svg/archive.svg"></ion-icon>
+            <ion-icon size="large" src="./assets/svg/archive.svg"></ion-icon>
           </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
       <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
-        <!-- <ion-icon name="clipboard"></ion-icon> -->
         <ion-icon src="./assets/svg/clipboard.svg"></ion-icon>
       </ion-fab-button>
     </ion-item>
@@ -65,7 +66,6 @@
         </ion-item-options>
       </ion-item-sliding>
       <ion-fab-button slot="end" (click)="choixCommandesModal(commande.keyClient,commande.pseudoClient)">
-        <!-- <ion-icon name="clipboard"></ion-icon> -->
         <ion-icon src="./assets/svg/clipboard.svg"></ion-icon>
       </ion-fab-button>
     </ion-item>
