Problème back ajouter produit

--- a/src/app/ajouter-produit/ajouter-produit.page.html
+++ b/src/app/ajouter-produit/ajouter-produit.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color='primary'>
     <ion-buttons id='retourProduits' slot="start">
-      <ion-back-button defaultHref="tabs/produits" text=""></ion-back-button>
+      <ion-back-button icon="./assets/svg/arrow-back.svg" defaultHref="/tabs/produits" text=""></ion-back-button>
     </ion-buttons>
     <ion-title id='titre'>Ajouter un produit</ion-title>
   </ion-toolbar>
