--- a/src/app/tabs/commandes/commandes.page.html
+++ b/src/app/tabs/commandes/commandes.page.html
@@ -36,7 +36,7 @@
           (click)="versVueCommande(commande)">
           <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
           <ion-item>{{commande.numeroCommande}}</ion-item>
-          <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
+          <ion-item>{{commande.dateCommande | date: 'dd-mm-yyyy'}}</ion-item>
         </ion-item>
         <ion-item-options side="start">
           <ion-item-option color="success" (click)="livrerCommande(commande)">
@@ -56,7 +56,7 @@
           (click)="versVueCommande(commande)">
           <ion-item class="nom" slot="start">{{commande.nomClient}}</ion-item>
           <ion-item>{{commande.numeroCommande}}</ion-item>
-          <ion-item>{{commande.dateCommande | date: 'dd MMMM yyyy'}}</ion-item>
+          <ion-item>{{commande.dateCommande | date: 'dd-mm-yyyy'}}</ion-item>
         </ion-item>
         <ion-item-options *ngIf="commande.commandeFacturee!='' || fournisseurs " side="start">
           <ion-item-option color="danger" (click)="delivrerCommande(commande)">
